# llm-kit

./: .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/llm_kit/: __init__.py
src/llm_kit/chunking/: __init__.py  chunking.py
src/llm_kit/embeddings/: __init__.py  base.py  config.py  factory.py  local.py  openai.py
src/llm_kit/llms/: __init__.py  _tool_schema.py  anthropic.py  base.py  config.py  factory.py  openai.py
src/llm_kit/observability/: __init__.py  base.py  names.py
src/llm_kit/parsers/: base.py  models.py  pdf_parser.py
src/llm_kit/prompts/: __init__.py  prompt.py  prompts_library.py
src/llm_kit/tools/: __init__.py  tool.py  tool_engine.py  tool_registry.py
src/llm_kit/vectorstores/: __init__.py  base.py  pgvectorstore.py  qdrantvectorstore.py  sqlitevectorstore.py  types.py
src/llm_kit/vectorstores/migrations/: pgvector.sql
tests/integration/parsers/: conftest.py  test_pdf_parser.py
tests/integration/vectorstores/: test_pgvectorstore.py  test_qdrantvectorstore.py
tests/unit/chunking/: test_chunking.py
tests/unit/embeddings/: test_local.py  test_openai.py
tests/unit/llms/: __init__.py  test_anthropic.py  test_factory.py  test_openai.py  test_openai_async.py  test_tool_schema.py
tests/unit/prompts/: test_prompts_library.py
tests/unit/tools/: test_tool.py  test_tool_engine.py  test_tool_registry.py
tests/unit/vectorstores/: test_sqlitevectorstore.py
