[tool.poetry]
name = "llm-kit"
version = "0.4.3"
description = "Reusable LLM / RAG utilities for production systems"
authors = ["Sumeet Kumar"]
readme = "README.md"
packages = [
    { include = "llm_kit", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.5.1"
openai = "^2.14.0"
anthropic = "^0.45.0"
pytest = "^8.0.0"
pytest-asyncio = "^1.3.0"
sentence-transformers = "^5.2.0"
sqlite-vec = "^0.1.6"
tenacity = "^9.1.2"
psycopg = "^3.3.2"
psycopg-pool = "^3.3.0"
testcontainers = "^4.13.3"
pgvector = "^0.4.2"
qdrant-client = "^1.16.2"
httpx = "^0.28.1"
apsw = "^3.51.1.0"
pdfplumber = "^0.11.9"
reportlab = "^4.4.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8"
mypy = "^1.13"
types-pyyaml = "^6.0.12.20250915"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | venv
    | __pycache__
    | build
    | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["llm_kit"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
]

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
